# TerminalOPE

./: Cargo.toml  README.md
src/: app.rs  main.rs  ui.rs
src/tools/: file_tools.rs  mod.rs  music.rs  video.rs
