[package]
name = "terminus"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
crossterm = "0.29.0"
indicatif = "0.17.11"
rodio = "0.20.1"
rusty_audio = "1.4.1"
tui = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
